--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,22 @@
 <div class="container">
-  <app-cockpit></app-cockpit>
+  <app-cockpit (svCreated)="onServerAdded($event)" (bpCreated)="onBlueprintAdded($event)"></app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
-      <app-server-element *ngFor="let server of serverElements" [serverEElement]="server">
-
-      </app-server-element>
+      <button class="btn btn-primary" (click)="onChangeFirst()">Click to perform</button>
+      <button class="btn btn-danger" (click)="onDestroyFirst()">Click to perform</button>
+      <div class="row">
+        <span style="text-align: left;">List of Servers</span>
+        <app-server-element 
+        *ngFor="let server of serverElements" 
+        [serverEElement]="server" 
+        [name]="server.name">
+          <p>
+            <strong *ngIf="server.type === 'server'" style="color: red">{{ server.content }}</strong>
+            <em *ngIf="server.type === 'blueprint'">{{ server.content }}</em>
+          </p>
+        </app-server-element>
+      </div>
     </div>
   </div>
 </div>
