--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         *ngFor="let server of serverElements" 
         [serverEElement]="server" 
         [name]="server.name">
-          <p>
+          <p #contentParagraph>
             <strong *ngIf="server.type === 'server'" style="color: red">{{ server.content }}</strong>
             <em *ngIf="server.type === 'blueprint'">{{ server.content }}</em>
           </p>
